frontend/view_profile/style.css
@import url('../../frontend/main_page/template-main.css');

.logo-img {
    height: 25vh;
    width: 15vw;
}

.user-card {
    gap: 10px;
}


.rightcolumn h3 {
    align-self: center;
}

/* .user-card input {
    display:none;
} */

.change-info-form {
    background-color: #f1f1f1;
    display: flex;
    flex-flow: column wrap;
    justify-content: space-evenly;
    align-items: center;
    gap: 10px;
}

.without-btn {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    gap: 10px;
}

.additional-grad {
    display: none;
}

.additional-rec {
    display: none;
}

.form-item-button button{
    background-color:#4b0082;
    color: white;
    font-size: 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    align-self: center;
    padding: 10px;
}

.form-item-button button:hover {
    background-color: #965bc0;
}

/* popup styling */
.popup-container {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
}

.popup-box {
    background-color: #fefefe;
    margin: auto; 
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
    max-width: 500px;
    text-align: center;
}

#popup-close {
    background-color: #4b0082;
    color: white;
    padding: 10px 20px;
    margin-top: 20px;
    border: none;
    cursor: pointer;
    font-size: 16px;
    border-radius: 20%;
}

#popup-close:hover {
    background-color: #db87f7;
}

